envoy-scaling-experiment/test/envoy-bootstrap.yaml
---
node:
  id: ingressgateway
  cluster: istio-ingressgateway
  locality:
    region: us-west1
    zone: us-west1-a
  metadata: {}
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000
dynamic_resources:
  lds_config:
    ads: {}
  cds_config:
    ads: {}
  ads_config:
    api_type: GRPC
    grpc_services:
      - envoy_grpc:
          cluster_name: xds-grpc
static_resources:
  clusters:
    - name: jaeger
      type: STRICT_DNS
      connect_timeout: 0.250s
      lb_policy: ROUND_ROBIN
      hosts:
        - socket_address:
            protocol: TCP
            address: jaeger-query
            port_value: 16686
    - name: jaeger-collector
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: jaeger-collector
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: jaeger-collector
                  port_value: 9411
    - name: prometheus_stats
      type: STATIC
      connect_timeout: 0.250s
      lb_policy: ROUND_ROBIN
      hosts:
        - socket_address:
            protocol: TCP
            address: 127.0.0.1
            port_value: 15000
    - name: xds-grpc
      type: STRICT_DNS
      dns_refresh_rate: 300s
      dns_lookup_family: V4_ONLY
      connect_timeout: 10s
      lb_policy: ROUND_ROBIN
      hosts:
        - socket_address:
            address: navigator
            port_value: 8080
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 100000
            max_pending_requests: 100000
            max_requests: 100000
          - priority: HIGH
            max_connections: 100000
            max_pending_requests: 100000
            max_requests: 100000
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      http2_protocol_options: {}
  listeners:
    - address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8001
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: stats
                generate_request_id: true
                route_config:
                  virtual_hosts:
                    - name: jaeger
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: jaeger
                http_filters:
                  name: envoy.router
    - address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 15090
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: stats
                route_config:
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/stats/prometheus"
                          route:
                            cluster: prometheus_stats
                http_filters:
                  name: envoy.router
